--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "browser-sync": "^2.26.7",
     "del": "^5.1.0",
     "gulp": "^4.0.2",
+    "gulp-clean-css": "^4.2.0",
     "gulp-htmlmin": "^5.0.1",
     "gulp-postcss": "^8.0.0",
     "postcss-sorting": "^5.0.1"
