--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "gulp-babel": "^8.0.0",
     "gulp-clean-css": "^4.2.0",
     "gulp-eslint": "^6.0.0",
+    "gulp-gzip": "^1.4.2",
     "gulp-htmlmin": "^5.0.1",
+    "gulp-imagemin": "^6.1.0",
     "gulp-postcss": "^8.0.0",
     "gulp-uglify": "^3.0.2",
     "postcss-sorting": "^5.0.1"
